# hephaestus

./: .clang-tidy  .cmake-format.py  MODULE.bazel
bazel/: hephaestus.bzl  repositories.bzl
bazel/foreign_cc/: foxglove_websocket.BUILD
cmake/: 01_version.cmake  05_modules.cmake  build.cmake  external.cmake
modules/bag/: CMakeLists.txt
modules/bag/src/: writer.cpp  zenoh_player.cpp
modules/examples/: CMakeLists.txt
modules/examples/examples/: CMakeLists.txt
modules/examples/tests/: zenoh_tests.cpp
modules/ipc/: BUILD  CMakeLists.txt
modules/ipc/include/hephaestus/ipc/: topic.h  topic_database.h
modules/ipc/include/hephaestus/ipc/zenoh/: service.h  subscriber.h
modules/ipc/include/hephaestus/ipc/zenoh/action_server/: action_server.h
modules/ipc/src/: topic.cpp
modules/ipc/src/zenoh/: dynamic_subscriber.cpp  liveliness.cpp  raw_subscriber.cpp  service.cpp  session.cpp  topic_database.cpp
modules/ipc/tests/: CMakeLists.txt  action_server_tests.cpp  pub_sub_tests.cpp  service_tests.cpp  topic_database_tests.cpp
modules/serdes/: CMakeLists.txt
modules/serdes/include/hephaestus/serdes/protobuf/: protobuf.h
modules/types/tests/: tests.cpp
modules/utils/include/hephaestus/utils/: exception.h
modules/utils/include/hephaestus/utils/format/: format.h
modules/websocket_bridge/: BUILD  CMakeLists.txt
